# faabric

./: .clang-format  .clang-tidy  .dockerignore  .env  .gdbinit  .gitignore  .readthedocs.yaml  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  README.md  cliff.toml  codecov.yml  conan-profile.txt  conanfile.txt  conanprofile.txt  docker-compose.yml  faabric.cpp  findings.md  generate_flame.sh  leak-sanitizer-ignorelist.txt  requirements.txt  thread-sanitizer-ignorelist.txt  workon.sh
docs/: .gitignore  CMakeLists.txt  Doxyfile  conf.py  development.md  gcp.md  index.rst  mpi_native.md  native_mpi.md
docs/source/: development.md  mpi.md  mpi_native.md
examples/: CMakeLists.txt  check.cpp  hello_world.cpp  mpi_allgather.cpp  mpi_allreduce.cpp  mpi_alltoall.cpp  mpi_bcast.cpp  mpi_cart_create.cpp  mpi_cartesian.cpp  mpi_gather.cpp  mpi_helloworld.cpp  mpi_isendrecv.cpp  mpi_put.cpp  mpi_reduce.cpp  mpi_runner.cpp  mpi_scan.cpp  mpi_scatter.cpp  mpi_send.cpp  mpi_sendrecv.cpp  mpi_status.cpp  mpi_typesize.cpp  mpi_wincreate.cpp  server.cpp
examples/hello/: CMakeLists.txt  Dockerfile
mpi-native/examples/: CMakeLists.txt  mpi_allgather.cpp  mpi_allreduce.cpp  mpi_alltoall.cpp  mpi_bcast.cpp  mpi_cart_create.cpp  mpi_cartesian.cpp  mpi_checks.cpp  mpi_gather.cpp  mpi_helloworld.cpp  mpi_isendrecv.cpp  mpi_onesided.cpp  mpi_order.cpp  mpi_probe.cpp  mpi_put.cpp  mpi_reduce.cpp  mpi_scan.cpp  mpi_scatter.cpp  mpi_send.cpp  mpi_sendrecv.cpp  mpi_status.cpp  mpi_typesize.cpp  mpi_wincreate.cpp
src/batch-scheduler/: BatchScheduler.cpp  BinPackScheduler.cpp  CMakeLists.txt  CompactScheduler.cpp  DecisionCache.cpp  SchedulingDecision.cpp  SpotScheduler.cpp
src/endpoint/: CMakeLists.txt  Endpoint.cpp  FaabricEndpoint.cpp  FaabricEndpointHandler.cpp
src/executor/: CMakeLists.txt  DummyExecutor.cpp  Executor.cpp  ExecutorContext.cpp  ExecutorFactory.cpp  ExecutorTask.cpp  FaabricExecutor.cpp  FaabricMain.cpp  FaabricPool.cpp  faabric_runner.cpp
src/flat/: .gitignore  CMakeLists.txt  FlatRPCServer.cpp  faabric.fbs  faabric.grpc.fb.cc  flat.cpp
src/mpi/: CMakeLists.txt  MpiContext.cpp  MpiExecutor.cpp  MpiMessage.cpp  MpiMessageBuffer.cpp  MpiWorld.cpp  MpiWorldRegistry.cpp  mpi.cpp  mpi.proto
src/mpi-native/: CMakeLists.txt  MpiExecutor.cpp  mpi.cpp  mpi_native.cpp
src/mpi_native/: CMakeLists.txt  MpiExecutor.cpp  mpi_native.cpp
src/planner/: CMakeLists.txt  Planner.cpp  PlannerClient.cpp  PlannerEndpointHandler.cpp  PlannerServer.cpp  PlannerState.cpp  is_app_migratable.cpp  planner.proto  planner_server.cpp
src/planner/scheduler/: CMakeLists.txt  Scheduler.cpp
src/proto/: CMakeLists.txt  RPCServer.cpp  faabric.proto  mpiMessage.proto
src/rpc/: CMakeLists.txt  RPCServer.cpp
src/runner/: CMakeLists.txt  FaabricMain.cpp  diff_stress.cpp  dirty_benchmark.cpp  pagemap_test.cpp  queue_prof.cpp
src/scheduler/: AsyncCallClient.cpp  AsyncCallServer.cpp  CMakeLists.txt  DistributedCoordination.cpp  DistributedCoordinationGroup.cpp  DistributedCoordinator.cpp  DistributedSync.cpp  DummyExecutor.cpp  DummyExecutorFactory.cpp  DummyScheduler.cpp  ExecGraph.cpp  Executor.cpp  ExecutorContext.cpp  ExecutorFactory.cpp  FunctionCallClient.cpp  FunctionCallServer.cpp  FunctionMigrationServer.cpp  FunctionMigrationThread.cpp  MpiContext.cpp  MpiMessageBuffer.cpp  MpiThreadPool.cpp  MpiWorld.cpp  MpiWorldRegistry.cpp  Scheduler.cpp  SnapshotClient.cpp  SnapshotServer.cpp
src/state/: CMakeLists.txt  DummyStateServer.cpp  InMemoryStateKeyValue.cpp  InMemoryStateRegistry.cpp  RedisStateKeyValue.cpp  State.cpp  StateClient.cpp  StateKeyValue.cpp  StateServer.cpp
src/transport/: CMakeLists.txt  Message.cpp  MessageContext.cpp  MessageEndpoint.cpp  MessageEndpointClient.cpp  MessageEndpointServer.cpp  MpiMessageEndpoint.cpp  PointToPointBroker.cpp  PointToPointClient.cpp  PointToPointGroup.cpp  PointToPointMessage.cpp  PointToPointRegistry.cpp  PointToPointServer.cpp  SimpleMessageEndpoint.cpp  context.cpp
src/transport/tcp/: Address.cpp  CMakeLists.txt  RecvSocket.cpp  SendSocket.cpp  Socket.cpp  SocketOptions.cpp
src/util/: CMakeLists.txt  ExecGraph.cpp  MessageResultPromise.cpp  PeriodicBackgroundThread.cpp  barrier.cpp  batch.cpp  bytes.cpp  chaining.cpp  clock.cpp  config.cpp  crash.cpp  delta.cpp  dirty.cpp  environment.cpp  exec_graph.cpp  files.cpp  func.cpp  gids.cpp  http.cpp  hwloc.cpp  json.cpp  latch.cpp  locks.cpp  logging.cpp  memory.cpp  message.cpp  network.cpp  ptp.cpp  queue.cpp  random.cpp  scheduling.cpp  snapshot.cpp  state.cpp  string_tools.cpp  testing.cpp  timing.cpp  tracing.cpp
src/wasm/: CMakeLists.txt  wasm.cpp
src/zeromq/: CMakeLists.txt  MessageEndpoint.cpp  MpiMessageEndpoint.cpp
tests/test/: CMakeLists.txt  main.cpp  pool_test.cpp  queue_benchmark.cpp  test_grpc.cpp  test_grpc.py  threadPool.cpp  threadPool.h
tests/test/batch-scheduler/: test_batch_scheduler.cpp  test_binpack_scheduler.cpp  test_compact_scheduler.cpp  test_scheduling_decisions.cpp  test_spot_scheduler.cpp
tests/test/endpoint/: test_endpoint.cpp  test_endpoint_api.cpp  test_handler.cpp
tests/test/executor/: test_executor.cpp  test_executor_context.cpp  test_executor_reaping.cpp
tests/test/mpi/: test_mpi_context.cpp  test_mpi_exec_graph.cpp  test_mpi_message.cpp  test_mpi_message_buffer.cpp  test_mpi_world.cpp  test_multiple_mpi_worlds.cpp  test_remote_mpi_worlds.cpp
tests/test/planner/: test_planner_client_server.cpp  test_planner_endpoint.cpp  test_planner_hosts.cpp
tests/test/proto/: test_proto.cpp
tests/test/redis/: test_redis.cpp
tests/test/runner/: test_main.cpp
tests/test/scheduler/: test_distributed_coordination.cpp  test_distributed_sync.cpp  test_exec_graph.cpp  test_executor.cpp  test_executor_context.cpp  test_executor_reaping.cpp  test_function_client_server.cpp  (+10 more)
tests/utils/: CMakeLists.txt  DummyExecutor.cpp  DummyExecutor.h  DummyExecutorFactory.cpp  DummyExecutorFactory.h  DummyStateServer.cpp  exec_graph_utils.cpp  faabric_utils.h  fixtures.h  http_utils.cpp  message_utils.cpp  planner_utils.cpp  scheduling_utils.cpp  system_utils.cpp
(+427 files in other folders)
